# Stay_AI---chatabot_service

./: .gitignore  LICENSE  README.md  env_template.txt  main.py  requirements.txt
backend/agents/stay_ai_crew/: README.md  env_template.txt  pyproject.toml  report.md
backend/agents/stay_ai_crew/mem0_db/: chroma.sqlite3
backend/agents/stay_ai_crew/src/stay_ai_crew/: crew.py  main.py
backend/agents/stay_ai_crew/src/stay_ai_crew/tools/: custom_tool.py
backend/conversation/: chat.py
backend/embeddings/: base_embedding.py  jina_embedding.py
backend/llms/groq_llm/: inference.py
backend/memory/chroma_memory/: add_data.py  retrieve_data.py
backend/memory/mem0_memory/: try_mem0.py
backend/utils/: json_utils.py
frontend/: README.md
