[project]
name = "stay_ai_crew"
version = "0.1.0"
description = "stay_ai_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.12"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
stay_ai_crew = "stay_ai_crew.main:run"
run_crew = "stay_ai_crew.main:run"
train = "stay_ai_crew.main:train"
replay = "stay_ai_crew.main:replay"
test = "stay_ai_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
